
    - Although this release should be back compatible (with the exception of any
      code using the -any pragma) you are encouraged to test it throughly as if
      you are doing anything out of the ordinary with CGI.pm (i.e. have bugs
      that may have been masked by the AUTOLOAD feature) you may see some issues.

    - References: GH #162, GH #137, GH #164

	[ SPEC / BUG FIXES ]
    - Add the multi_param method to :cgi export (thanks to xblitz for the patch
      and tests. GH #167)

4.13 2014-12-18

    [ RELEASE NOTES ]
    - CGI::Pretty is now DEPRECATED and will be removed in a future release.
      Please see GH #162 (https://github.com/leejo/CGI.pm/issues/162) for more
      information and discussion (also GH #140 for HTML function deprecation
      discussion: https://github.com/leejo/CGI.pm/issues/140)

    [ TESTING ]
    - fix t\rt-84767.t for failures on Win32 platforms related to file paths

4.11 2014-12-02

    [ SPEC / BUG FIXES ]
    - more hash key ordering bugs fixed in HTML attribute output (GH #158,
      thanks to Marcus Meissner for the patch and test case)

    [ REFACTORING ]
    - escapeHTML (and unescapeHTML) have been refactored to use the functions
      exported by the HTML::Entities module (GH #157)
    - change BUILD_REQUIRES to TEST_REQUIRES in Makefile.PL as these are test
      dependencies not build dependencies (GH #159)

    [ DOCUMENTATION ]
    - replace any remaining uses of indirect object notation (new Object) with
      the safer Object->new syntax (GH #156)

4.10 2014-11-27

    [ SPEC / BUG FIXES ]
    - favour -content-type arg in header if -type and -charset options are also
      passed in (GH #155, thanks to kaoru for the test case). this change also
      sorts the hash keys in the rearrange method in CGI::Util meaning the order
      of the arrangement will always be the same for params that have multiple
      aliases. really you shouldn't be passing in multiple aliases, but this will